--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "axios": "^1.6.7",
     "vue": "^3.4.21"
   },
   "devDependencies": {
+    "@vue/test-utils": "^2.4.4",
     "@vitejs/plugin-vue": "^5.0.4",
+    "jsdom": "^24.0.0",
     "json-server": "^1.0.0-alpha.23",
     "sass": "^1.71.1",
     "sass-loader": "^14.1.1",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "vitest": "^1.4.0"
   }
 }
